--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.ts",
+  "main": "index.js",
   "scripts": {
     "seed": "ts-node src/seeders/role.seeder.ts",
-    "dev": "npx nodemon",
+    "dev": "ts-node-dev --files src/index.ts",
     "build": "tsc && cp /package.json ./dist",
-    "start": "node dist/app.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -36,8 +36,7 @@
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.7.2"
   }
 }
